Redirect profile-login-main, show password error, fix burger style, thin scrollbar

--- a/src/components/ui/burger-constructor/burger-constructor.module.css
+++ b/src/components/ui/burger-constructor/burger-constructor.module.css
@@ -11,6 +11,11 @@
   list-style-type: none;
   margin: 0;
   padding: 0;
+  scrollbar-width: thin;
+}
+
+.elements_notEmpty {
+  margin-bottom: 16px;
 }
 
 .total {
