--- a/src/components/ui/burger-ingredients/burger-ingredients.module.css
+++ b/src/components/ui/burger-ingredients/burger-ingredients.module.css
@@ -18,6 +18,7 @@ p {
 .content {
   overflow-y: scroll;
   overflow-x: hidden;
+  scrollbar-width: thin;
 }
 
 .menu {
