--- a/src/components/ui/pages/feed/feed.module.css
+++ b/src/components/ui/pages/feed/feed.module.css
@@ -31,6 +31,7 @@
   overflow-y: auto;
   overflow-x: hidden;
   width: 580px;
+  scrollbar-width: thin;
 }
 
 .refresh {
